TFP-4633 egen vurdering for scanning med klageinstansforside