@@ -27,7 +27,7 @@
         <changelist>-SNAPSHOT</changelist>
         <felles.version>4.0.6</felles.version>
         <prosesstask.version>2.6.6</prosesstask.version>
-        <java.version>16</java.version>
+        <java.version>17</java.version>
         <argLine>-Xms256m -Dfile.encoding=UTF-8</argLine>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -300,9 +300,6 @@
                     <version>3.8.1</version>
                     <configuration>
                         <fork>true</fork>
-                        <compilerArgs>
-                            <arg>--enable-preview</arg>
-                        </compilerArgs>
                         <parameters>true</parameters>
                         <encoding>UTF-8</encoding>
                         <release>${java.version}</release>
@@ -326,14 +323,14 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>3.3.0</version>
+                    <version>3.3.1</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.22.2</version>
                     <configuration>
-                        <argLine>--enable-preview</argLine>
+                        <argLine>${argLine}</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
